--- a/Romanian/main/Music.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Music.apk/res/values-ro/strings.xml
@@ -49,8 +49,17 @@
     <string name="app_label">Descărcări</string>
     <string name="artist">Artişti</string>
     <string name="artist_album">Albume</string>
+    <string name="artist_area_all">Toate</string>
+    <string name="artist_area_china">China</string>
+    <string name="artist_area_europe_usa">Europa/USA</string>
+    <string name="artist_area_japan">Japonia</string>
+    <string name="artist_area_korea">Coreea</string>
     <string name="artist_favor">Recomandate</string>
-  <string name="artist_home_search_hint">Căutați artiști</string>
+    <string name="artist_gender_all">Toate</string>
+    <string name="artist_gender_female">Feminin</string>
+    <string name="artist_gender_group">Trupe</string>
+    <string name="artist_gender_male">Masculin</string>
+    <string name="artist_home_search_hint">Căutați artiști</string>
     <string name="artist_is_empty">Numele artistului nu poate fi necompletat.</string>
     <string name="artist_name">Artist</string>
     <string name="artist_news">Noutăți</string>
@@ -99,7 +108,7 @@
     <string name="can_not_find_resource">Nu se pot găsi resurse</string>
     <string name="cancel">Anulaţi</string>
     <string name="cancel_running_download">Renunță</string>
-  <string name="change_download_quality">Modificați calitatea descărcărilor</string>
+    <string name="change_download_quality">Modificați calitatea descărcărilor</string>
     <string name="channel_list_fragment_title">Radio</string>
     <string name="chinese_female">Artiste (China)</string>
     <string name="chinese_group">Trupe (China)</string>
@@ -204,7 +213,7 @@ este oferit în principal de către Ultimate Inc."</string>
     <string name="doc_filter">Documente</string>
     <string name="done">Terminat</string>
     <string name="download">Descărcaţi</string>
-  <string name="download_added_to_list">Adăugată în lista de descărcare</string>
+    <string name="download_added_to_list">Adăugată în lista de descărcare</string>
     <string name="download_all_song">Descărcaţi tot</string>
     <string name="download_apk_desktop_installing">Se instalează</string>
     <string name="download_apk_desktop_pause">Oprită</string>
@@ -260,20 +269,20 @@ este oferit în principal de către Ultimate Inc."</string>
     <string name="download_success">Finalizată</string>
     <string name="download_title_sorted_by_date">Descărcări - Sortate după dată</string>
     <string name="download_title_sorted_by_size">Descărcări - Sortate după dimensiune</string>
-  <string name="download_toast">Utilizare date mobile pentru descărcarea melodiilor</string>
-  <string name="download_toast_with_beyond_data">Utilizare date mobile pentru descărcarea melodiilor. Limita a fost depășită cu %s</string>
-  <string name="download_toast_with_data">Utilizare date mobile pentru descărcarea melodiilor, %s rămas</string>
+    <string name="download_toast">Utilizare date mobile pentru descărcarea melodiilor</string>
+    <string name="download_toast_with_beyond_data">Utilizare date mobile pentru descărcarea melodiilor. Limita a fost depășită cu %s</string>
+    <string name="download_toast_with_data">Utilizare date mobile pentru descărcarea melodiilor, %s rămas</string>
     <string name="download_traffic_dialog_buy_package">Achiziționați un plan de date pentru muzică</string>
-  <string name="download_traffic_dialog_msg">Mai aveți %s din limita de date mobile rămas. Utilizați conexiunea de date mobile pentru a descărca melodii?</string>
-  <string name="download_traffic_dialog_msg_beyond">"Ați depășit deja limita traficului de date cu %s. Utilizați conexiunea de date mobile pentru a descărca melodii?"</string>
-  <string name="download_traffic_dialog_msg_serious">Mai aveți doar %s rămas din limita de date mobile. Utilizați conexiunea de date mobile pentru a descărca melodii?</string>
-  <string name="download_traffic_dialog_msg_without_data">"Utilizați datele mobile pentru a descărca melodii. Descărcați oricum?"</string>
+    <string name="download_traffic_dialog_msg">Mai aveți %s din limita de date mobile rămas. Utilizați conexiunea de date mobile pentru a descărca melodii?</string>
+    <string name="download_traffic_dialog_msg_beyond">"Ați depășit deja limita traficului de date cu %s. Utilizați conexiunea de date mobile pentru a descărca melodii?"</string>
+    <string name="download_traffic_dialog_msg_serious">Mai aveți doar %s rămas din limita de date mobile. Utilizați conexiunea de date mobile pentru a descărca melodii?</string>
+    <string name="download_traffic_dialog_msg_without_data">"Utilizați datele mobile pentru a descărca melodii. Descărcați oricum?"</string>
     <string name="download_traffic_dialog_negative_button">Așteptați conectarea la Wi-Fi</string>
-  <string name="download_traffic_dialog_position_button">Descărcați</string>
-  <string name="download_traffic_dialog_position_button_serious">Descarc oricum</string>
-  <string name="download_traffic_dialog_title">Avertisment utilizare date mobile</string>
-  <string name="download_traffic_dialog_title_beyond">Limita de date a fost depășită</string>
-  <string name="download_traffic_dialog_title_serious">Date mobile aproape utilizate</string>
+    <string name="download_traffic_dialog_position_button">Descărcați</string>
+    <string name="download_traffic_dialog_position_button_serious">Descarc oricum</string>
+    <string name="download_traffic_dialog_title">Avertisment utilizare date mobile</string>
+    <string name="download_traffic_dialog_title_beyond">Limita de date a fost depășită</string>
+    <string name="download_traffic_dialog_title_serious">Date mobile utilizate aproape în întregime</string>
     <string name="download_unknown_title">&lt;Nedenumit&gt;</string>
     <string name="download_wait_connect">Așteaptă conectarea la Wi-Fi</string>
     <string name="download_when_network_connected">Descarcă când sunteți conectat la internet</string>
@@ -441,8 +450,10 @@ este oferit în principal de către Ultimate Inc."</string>
     <string name="local_page_artist">Artiști pe care îi urmăriți</string>
     <string name="local_page_custom_subtitle">Melodii noi în fiecare zi</string>
     <string name="local_page_custom_title">Pentru tine</string>
+    <string name="local_page_playlist">Listele mele de redare</string>
     <string name="local_page_song_all">Toate melodiile</string>
     <string name="local_page_song_download">Melodii din telefon</string>
+    <string name="local_page_song_download_history">Descărcări</string>
     <string name="local_page_song_favorite">Melodii favorite</string>
     <string name="local_tracks_short">Muzică locală</string>
     <string name="lrc_search_failed">Versurile nu au fost găsite</string>
@@ -467,7 +478,7 @@ este oferit în principal de către Ultimate Inc."</string>
     <string name="metered_alert_msg">"Utilizați datele mobile pentru a reda melodii. Continuați oricum?"</string>
     <string name="metered_alert_msg_with_data">Mai aveți %s din traficul de date mobile rămas. Utilizați datele mobile pentru a reda melodii?</string>
     <string name="metered_allow">Redați</string>
-  <string name="metered_beyond_alert">Limita de date depășită</string>
+    <string name="metered_beyond_alert">Limita de date depășită</string>
     <string name="metered_disallow">Nu acum</string>
     <string name="metered_play_toast">Utilizare conexiune de date mobile pentru a reda melodiile</string>
     <string name="metered_play_toast_with_beyond_data">Se utilizează datele mobile pentru a reda melodii. S-a depășit limita cu %s</string>
@@ -554,6 +565,7 @@ este oferit în principal de către Ultimate Inc."</string>
     <string name="no_local_source_find">Nu s-a putut găsi melodia</string>
     <string name="no_online_song_selected">Nicio melodie selectată</string>
     <string name="no_results_return">Niciun rezultat al căutării</string>
+    <string name="no_scanned_songs">Gol</string>
     <string name="no_song">Nicio melodie</string>
     <string name="no_song_downloaded">Nu se poate conecta la reţea. Verificaţi conexiunea şi încercaţi din nou.</string>
     <string name="normal_quality">Calitate bună</string>
@@ -624,6 +636,7 @@ este oferit în principal de către Ultimate Inc."</string>
     <string name="play_next">Redă următoarea piesă</string>
     <string name="playback_failed_no_title_by_bad_file">Melodia nu poate fi redată. Formatul nu este acceptat sau fișierul nu există.</string>
     <string name="playlist_deleted_message">Listă de redare ştearsă</string>
+    <string name="playlist_empty">Nicio listă de redare găsită.</string>
     <string name="playlist_renamed_message">Listă de redare redenumită</string>
     <string name="playlist_type_album">Albume</string>
     <string name="playlist_type_artist">Artist</string>
@@ -670,6 +683,7 @@ este oferit în principal de către Ultimate Inc."</string>
     <string name="radar_support_by">Oferit de ACRCloud</string>
     <string name="really_pay">Achitaţi acum?</string>
     <string name="recently_played">Redată recent</string>
+    <string name="recently_played_songs">Redate recent</string>
     <string name="recommend_fragment_title">Recomandate</string>
     <string name="recommended_file_size_download_in_mobile">Utilizați %s din datele mobile pentru a descărca acest fișier?</string>
     <string name="recommended_no_file_size_download_in_mobile">Utilizați conexiunea de date mobile pentru a descărca acest fișier?</string>
@@ -696,7 +710,7 @@ este oferit în principal de către Ultimate Inc."</string>
     <string name="search_for_album">Album</string>
     <string name="search_for_artist">Artist</string>
     <string name="search_hint">Căutați artiști, melodii, albume și recomandări</string>
-  <string name="search_hint_not_support_online">Căutați artiști, melodii și albume</string>
+    <string name="search_hint_not_support_online">Căutați artiști, melodii și albume</string>
     <string name="search_history_clear_all">Goliți</string>
     <string name="search_instant_online_music">Online</string>
     <string name="search_lyric">Căutare versuri</string>
@@ -821,13 +835,14 @@ este oferit în principal de către Ultimate Inc."</string>
     <string name="talkback_search">Căutați</string>
     <string name="talkback_share">Partajați</string>
     <string name="task_already_exist">Sarcina există deja</string>
+    <string name="text_separator">|</string>
     <string name="ticket_summary">Cumpărați bilete pentru spectacole, concerte și alte evenimente</string>
     <string name="ticket_title">Arată biletele</string>
     <string name="time_to_upgrade">Actualizați aplicația Muzică Mi</string>
     <string name="title_online_artist">Artiști de Top</string>
     <string name="title_online_billboard">Topuri muzicale</string>
     <string name="title_online_fm">Radio</string>
-  <string name="title_online_fm_recommend">Posturi FM recomandate</string>
+    <string name="title_online_fm_recommend">Posturi FM recomandate</string>
     <string name="title_online_recommend">Liste de redare recomandate</string>
     <string name="title_online_release">Nou</string>
     <string name="title_online_song">Melodii populare</string>
