--- a/Romanian/main/CleanMaster.apk/res/values-ro/strings.xml
+++ b/Romanian/main/CleanMaster.apk/res/values-ro/strings.xml
@@ -42,7 +42,6 @@
     <string name="apps_sort_type_item_size">Dimensiune</string>
     <string name="apps_sort_type_item_time">Utilizate frecvent</string>
     <string name="apps_sort_type_title">Sortare</string>
-    <string name="authorize_detail"> %d aplicații blocate</string>
     <string name="auto_clean_switch_off">Dezactivat</string>
     <string name="auto_clean_switch_on">Activat</string>
     <string name="auto_cleaner_open">Activat</string>
@@ -110,7 +109,6 @@
     <string name="connecting">Conectare…</string>
     <string name="deep_clean_completed_tips">Curățare încheiată cu succes</string>
     <string name="deep_clean_data_path_clean_title">Golire memorie cache</string>
-    <string name="deep_clean_normal_clean_progress_desc">S-au curățat %1$s fișiere</string>
     <string name="deep_clean_uninstall_completed_tips">Dezinstalată cu succes</string>
     <string name="deepclean_1_k_clean">Curățare dintr-un click</string>
     <string name="deepclean_apk_content">Ștergeți fișierele .apk sau aplicațiile inutile</string>
@@ -188,13 +186,11 @@
     <string name="flow_rank_title">Utilizare date</string>
     <string name="function_app_lock_title">%d aplicații cu risc de încălcare a confidențialității​</string>
     <string name="garbage_clean_detail">Detalii</string>
-    <string name="garbage_cleanup_detail">%1$d ori, curățat %2$s</string>
     <string name="garbage_month">Curățat în această lună %s</string>
     <string name="gigabyteShort">GB</string>
     <string name="go_to">Continuă</string>
     <string name="goto_set">Setare</string>
     <string name="grabage_rank_title">Curățat astăzi</string>
-    <string name="harass_detail">Au fost blocate %1$d SMS-uri și %2$d apeluri</string>
     <string name="header_optimizer">Prin utilizarea acestei funcții, sunteți de acord cu %s.</string>
     <string name="hint_clean_select_items">Ştergere duplicate…</string>
     <string name="hints_ad_header_left">Fișiere inutile</string>
@@ -302,8 +298,6 @@
     <string name="name_debuglog_dir">Bsp Debug Log</string>
     <string name="name_optimizer">Politica de confidențialitate</string>
     <string name="nb_clear_set">Goliți memoria cache, vizualizați informații despre acumulator și lista blocărilor în ecranul de notificări</string>
-    <string name="net_assistant_detail">Utilizați %1$s, salvați %2$s</string>
-    <string name="net_assistant_title">Utilizați %s în această lună</string>
     <string name="network_not_available">"Nu se poate conecta la rețea"</string>
     <string name="news_change">Modificați</string>
     <string name="no_network">"Nu se poate conecta la rețea, încercați mai târziu"</string>
@@ -372,8 +366,8 @@
     <string name="recommended">Recomandate</string>
     <string name="remain_item_name_n7p"/>
     <string name="remain_item_name_pamp"/>
-    <string name="safety_check_detail">%1$d ori, ați câștigat %2$d puncte</string>
-    <string name="safety_rank">Înaintea a %d%% utilizatori MIUI în ceea ce privește securitatea</string>
+    <string name="resutl_function_deep_clean_summary">" "&lt;Data&gt;&amp;lt;font color=#ff0000 &amp;gt;%1$s&amp;lt;/font&amp;gt; mai multe fișiere pot fi curățate. Eliberați mai mult spațiu.&lt;/Data&gt;" "</string>
+    <string name="resutl_function_wechat_clean_summary">" "&lt;Data&gt;&amp;lt;font color=#ff0000 &amp;gt;%1$s&amp;lt;/font&amp;gt; din cache-ul WeChat. Eliberați mai mult spațiu.&lt;/Data&gt;" "</string>
     <string name="sc_allow_network_dialog_button">Permiteţi</string>
     <string name="sc_allow_network_dialog_message">Permiteți ca această aplicație să se conecteze la internet pentru a primi actualizări?</string>
     <string name="scanning">Scanare…</string>
@@ -449,11 +443,9 @@
     <string name="toast_uninstall_success">Dezinstalare finalizată</string>
     <string name="total_clean">Curățat în total: %s</string>
     <string name="total_clean_text">Curățat</string>
-    <string name="traffic_top">TOP 5 aplicații consumatoare de date</string>
     <string name="update_date_format">dd/MM/yyyy</string>
     <string name="virus_scan">Scanare pentru viruși</string>
   <string name="vungle_ad_name">ad-Vungle</string>
-    <string name="wechat_add_to_cleanlist">Curățat cu succes</string>
     <string name="wechat_cache_files">Cache WeChat</string>
     <string name="wechat_chat_clean_done">Totul arată bine</string>
     <string name="wechat_chat_data_type_cache">Cache WeChat</string>
